--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node main.js",
+    "dev": "node server.js",
     "deploy": "serverless deploy",
     "serverless-dev": "serverless offline start --port=3000",
     "logs": "serverless logs --function thefunction"
