--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "dev": "node server.js",
     "deploy": "serverless deploy",
-    "serverless-dev": "serverless offline start --port=3000",
-    "logs": "serverless logs --function thefunction"
+    "sls-dev": "serverless offline start --port=3000",
+    "logs": "serverless logs --function express",
+    "lint": "eslint ./"
   },
   "repository": {
     "type": "git",
@@ -21,9 +22,14 @@
   "homepage": "https://github.com/jakecoppinger/example-serverless-express-app#readme",
   "dependencies": {
     "aws-serverless-express": "^3.0.2",
+    "eslint": "^4.4.1",
     "express": "^4.15.3",
     "serverless": "^1.18.1",
     "serverless-offline": "^3.15.3",
     "serverless-plugin-include-dependencies": "^2.1.2"
+  },
+  "devDependencies": {
+    "eslint-config-airbnb-base": "^11.3.1",
+    "eslint-plugin-import": "^2.7.0"
   }
 }
