Update AWS runtime to Node 12, use Typescript

--- a/serverless.yaml
+++ b/serverless.yaml
@@ -2,20 +2,37 @@ service: example-serverless-express-app
 
 provider:
   name: aws
-  runtime: nodejs6.10
+  runtime: nodejs12.x
   memorySize: 128
   stage: dev
   region: ap-southeast-2
-
 functions:
-  express:
-    handler: lambda.handler
+  backend:
+    handler: dist/lambda.handler
     events:
-      - http: ANY {proxy+}
       - http:
-          path: /
+          path: / # this matches the base path
           method: ANY
+          cors: true
+      - http:
+          path: /{any+}
+          method: ANY
+          cors: true
+
+package: # Optional deployment packaging configuration
+  include: # Specify the directories and files which should be included in the deployment package
+    - dist/**
+  exclude:
+    - src/**
 
 plugins:
     - serverless-offline
     - serverless-plugin-include-dependencies
+    - serverless-api-gateway-throttling
+
+custom:
+  # Configures throttling settings for all http endpoints
+  apiGatewayThrottling:
+    maxRequestsPerSecond: 100
+    maxConcurrentRequests: 100
+
