--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node server.js",
-    "deploy": "serverless deploy",
-    "sls-dev": "serverless offline start --port=3000",
-    "logs": "serverless logs --function express",
-    "lint": "eslint ./"
+    "lint": "eslint ./",
+    "build": "./node_modules/typescript/bin/tsc",
+    "test": "ts-mocha test/**/*.ts frontend/test/**/*.ts",
+    "dev": "node -r source-map-support/register dist/server.js",
+    "deploy": "yarn build && serverless deploy",
+    "serverless-dev": "serverless offline start  --httpPort=5000 --host 0.0.0.0",
+    "logs": "serverless logs --function backend",
+    "logs:tail": "serverless logs --function backend -t"
   },
   "repository": {
     "type": "git",
@@ -25,11 +28,16 @@
     "eslint": "^4.4.1",
     "express": "^4.15.3",
     "serverless": "^1.18.1",
-    "serverless-offline": "^3.15.3",
     "serverless-plugin-include-dependencies": "^2.1.2"
   },
   "devDependencies": {
+    "@types/aws-serverless-express": "^3.3.4",
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.3.2",
     "eslint-config-airbnb-base": "^11.3.1",
-    "eslint-plugin-import": "^2.7.0"
+    "eslint-plugin-import": "^2.7.0",
+    "serverless-api-gateway-throttling": "^1.1.1",
+    "serverless-offline": "^7.0.0",
+    "typescript": "^4.3.5"
   }
 }
